--- a/forge1/src/Wallet.module.css
+++ b/forge1/src/Wallet.module.css
@@ -4,7 +4,7 @@
 	width: 50%;
 	margin: auto;
 	border-radius: 10px;
-	background-color: #A1C6EA;
+	background-color: #e0ffff;
 	box-shadow: 0.2em 0.2em 0 0.2em rgba(0,0,0,0.17);
 }
 
@@ -33,6 +33,22 @@
 	border: none;
 	padding: 0.7em 1.4em;
 	margin: 0 0.3em 0.3em 0.3em;
+	border-radius:0.15em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: 'Papyrus', 'Copperplate' sans-serif;
+	text-transform: uppercase;
+	font-weight: 400;
+	color:#FFFFFF;
+	background-color: #04080F;
+	box-shadow: inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+}
+
+.button5 {
+	border: none;
+	padding: 0.7em 1.4em;
+	margin: 0 0.3em 0.3em 0.3em;
+    align: center;
 	border-radius:0.15em;
 	box-sizing: border-box;
 	text-decoration: none;
